Basic Initialisation and testing with the server

--- a/DSIOfficial/app/src/main/res/layout/activity_main.xml
+++ b/DSIOfficial/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,27 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:textSize="30sp"
+        android:text="College Message: "
+        android:id="@+id/messageHeadingTextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="0.178"
+        app:layout_constraintVertical_bias="0.075"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="message goes here"
+        android:id="@+id/messageContenTextView"
+        android:textSize="23sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="0.135"
+        app:layout_constraintVertical_bias="0.233"/>
 
 </android.support.constraint.ConstraintLayout>
