--- a/DSIOfficial/app/src/main/res/layout/message_list.xml
+++ b/DSIOfficial/app/src/main/res/layout/message_list.xml
@@ -2,34 +2,42 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-   >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp">
+        android:layout_margin="10dp"
+        app:cardCornerRadius="2dp"
+        app:cardElevation="5dp"
+        >
         
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
+
             >
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/messageTitleTextView"
-                android:text="Message Title:"
+                android:text="Message Title"
                 android:textSize="30sp"
-                android:layout_margin="5dp"/>
+                android:textColor="@color/messageHeadingColour"
+                android:layout_margin="10dp"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/messageBodyTextView"
                 android:text="Message Body"
+                android:textColor="@color/messageDescriptionColour"
                 android:textSize="24sp"
-                android:layout_margin="10dp"/>
+                android:layout_margin="10dp"
+
+                />
 
         </LinearLayout>
 
