--- a/DSIOfficial/app/src/main/res/layout/activity_main.xml
+++ b/DSIOfficial/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:id="@+id/mainLinearLayout"
     tools:context=".MainActivity">
 
     <android.support.v7.widget.RecyclerView
