--- a/DSIOfficial/app/src/main/res/values/colors.xml
+++ b/DSIOfficial/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#313f91</color>
+    <color name="colorPrimaryDark">#313f91</color>
     <color name="colorAccent">#FF4081</color>
     <color name="messageHeadingColour">#000000</color>
     <color name="messageDescriptionColour">#494949</color>
