--- a/DSIOfficial/app/src/main/res/layout/activity_signup.xml
+++ b/DSIOfficial/app/src/main/res/layout/activity_signup.xml
@@ -144,7 +144,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#f11411a1"
-            android:text="Signup"
+            android:text="Sign Up"
             android:textColor="#FFFFFF"
             android:textStyle="bold"
             android:gravity="center"
@@ -175,7 +175,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_weight="0.34"
-            android:padding="10dp"
+            android:padding="17dp"
             android:src="@drawable/dsi_logo" />
         <LinearLayout
             android:layout_width="wrap_content"
