--- a/DSIOfficial/app/src/main/res/layout/fragment_book.xml
+++ b/DSIOfficial/app/src/main/res/layout/fragment_book.xml
@@ -1,15 +1,15 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:id="@+id/bookFragment"
-    android:layout_height="match_parent"
-    tools:context="com.example.amit.dsiofficial.BookFragment">
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             tools:context="com.example.amit.dsiofficial.NotificationFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/message"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerViewBook"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content">
+    </android.support.v7.widget.RecyclerView>
+
 
 </FrameLayout>
