--- a/DSIOfficial/app/src/main/res/menu/top_navigation.xml
+++ b/DSIOfficial/app/src/main/res/menu/top_navigation.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
     <item
         android:id="@+id/top_navigation_profile"
@@ -12,5 +14,14 @@
     <item
         android:id="@+id/top_navigation_logout"
         android:title="Log Out" />
+
+    <item
+        android:id="@+id/top_navigation_search"
+        android:title="Search"
+        android:icon="@drawable/ic_action_search"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="always|collapseActionView"
+        />
+
 
 </menu>
