--- a/DSIOfficial/app/src/main/res/values/dimens.xml
+++ b/DSIOfficial/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <dimen name="activity_vertical_margin">10dp</dimen>
     <dimen name="activity_horizontal_margin">10dp</dimen>
+        <dimen name="design_fab_size_mini" tools:override="true">70dp</dimen>
 </resources>
