Adding Book sell capabilities

--- a/DSIOfficial/app/src/main/res/layout/fragment_book.xml
+++ b/DSIOfficial/app/src/main/res/layout/fragment_book.xml
@@ -1,8 +1,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context="com.example.amit.dsiofficial.NotificationFragment">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="com.example.amit.dsiofficial.NotificationFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.RecyclerView
@@ -11,5 +12,24 @@
         android:layout_height="wrap_content">
     </android.support.v7.widget.RecyclerView>
 
+
+    <android.support.design.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fabLayout"
+        >
+
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="30dp"
+            app:fabSize="mini"
+            android:src="@drawable/addbook"
+            android:id="@+id/fabBook"
+
+            app:elevation="10dp"
+            />
+    </android.support.design.widget.CoordinatorLayout>
 
 </FrameLayout>
