--- a/DSIOfficial/app/src/main/res/values/dimens.xml
+++ b/DSIOfficial/app/src/main/res/values/dimens.xml
@@ -2,5 +2,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <dimen name="activity_vertical_margin">10dp</dimen>
     <dimen name="activity_horizontal_margin">10dp</dimen>
-        <dimen name="design_fab_size_mini" tools:override="true">70dp</dimen>
+    <dimen name="design_fab_size_mini" tools:override="true">70dp</dimen>
+    <dimen tools:override="true" name="design_fab_image_size">86dp</dimen>
 </resources>
