--- a/DSIOfficial/app/src/main/res/layout/fragment_book.xml
+++ b/DSIOfficial/app/src/main/res/layout/fragment_book.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.example.amit.dsiofficial.NotificationFragment">
+    tools:context="com.example.amit.dsiofficial.NotificationFragment"
+    >
 
     <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.RecyclerView
