--- a/DSIOfficial/app/src/main/res/layout/fragment_notification.xml
+++ b/DSIOfficial/app/src/main/res/layout/fragment_notification.xml
@@ -1,9 +1,7 @@
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.amit.dsiofficial.NotificationFragment">
 
     <!-- TODO: Update blank fragment layout -->
