--- a/DSIOfficial/app/src/main/res/menu/navigation.xml
+++ b/DSIOfficial/app/src/main/res/menu/navigation.xml
@@ -6,12 +6,15 @@
     <item
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:title="@string/title_notifications"
+        android:letterSpacing="0.3"/>
 
     <item
         android:id="@+id/navigation_textbooks_resale"
         android:icon="@drawable/icons_shopping_cart"
-        android:title="Textbooks Resale" />
+        android:title="Sell Books"
+        android:letterSpacing="0.3"
+        />
 
 
 </menu>
