--- a/DSIOfficial/app/src/main/res/menu/top_navigation.xml
+++ b/DSIOfficial/app/src/main/res/menu/top_navigation.xml
@@ -5,15 +5,18 @@
 
     <item
         android:id="@+id/top_navigation_profile"
-        android:title="Profile" />
+        android:title="Profile"
+        android:letterSpacing="0.3"/>
 
     <item
         android:id="@+id/top_navigation_settings"
-        android:title="Settings" />
+        android:title="Settings"
+        android:letterSpacing="0.3"/>
 
     <item
         android:id="@+id/top_navigation_logout"
-        android:title="Log Out" />
+        android:title="Log Out"
+        android:letterSpacing="0.3"/>
 
 
 </menu>
