Finishing book and notifications

--- a/DSIOfficial/app/src/main/res/menu/delete_book.xml
+++ b/DSIOfficial/app/src/main/res/menu/delete_book.xml
@@ -5,7 +5,7 @@
 
     <item
         app:showAsAction="ifRoom"
-        android:title="Delete: "
+        android:title="Delete "
         />
 
     <item
