Implementing attaching any type of file/document

--- a/DSIOfficial/app/src/main/res/layout/activity_post_notification.xml
+++ b/DSIOfficial/app/src/main/res/layout/activity_post_notification.xml
@@ -2,14 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/post_relative_layout"
 
     >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:paddingLeft="50dp"
-        android:paddingRight="50dp">
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -31,7 +32,7 @@
                     android:textAlignment="center"
                     android:layout_marginLeft="15dp"
                     android:background="#00000000"
-                    android:textSize="20dp"
+                    android:textSize="15dp"
                     android:inputType="text"
                     android:textColor="#000"
                     />
@@ -51,7 +52,7 @@
                     android:layout_marginLeft="15dp"
                     android:background="#00000000"
                     android:letterSpacing="0.1"
-                    android:textSize="20dp"
+                    android:textSize="14dp"
                     android:inputType="text"
                     android:textColor="#000"
                     />
@@ -66,7 +67,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
-                android:padding="26dp">
+                android:padding="16dp">
                 <EditText
                     android:id="@+id/newNotifDescription"
                     android:layout_width="match_parent"
@@ -76,7 +77,7 @@
                     android:layout_marginLeft="15dp"
                     android:background="#00000000"
                     android:letterSpacing="0.1"
-                    android:textSize="16dp"
+                    android:textSize="13dp"
                     android:maxLength="2000"
                     android:gravity="left"
                     android:maxLines="10"
@@ -85,12 +86,7 @@
                     android:textColor="#000"
                     />
             </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#4a5a71"
 
-                ></LinearLayout>
 
         </LinearLayout>
 
@@ -105,6 +101,30 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="10dp"
+            android:orientation="vertical"
+            >
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="12dp"
+                android:id="@+id/fileChosenTextView"
+                />
+
+            <ImageButton
+                android:id="@+id/attachButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Attach"
+                android:src="@drawable/ic_attach_file"
+                >
+
+                </ImageButton>
+        </LinearLayout>
 
         <TextView
             android:id="@+id/submitNotifTextView"
