--- a/DSIOfficial/app/src/main/res/layout/fragment_book.xml
+++ b/DSIOfficial/app/src/main/res/layout/fragment_book.xml
@@ -1,41 +1,58 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.SwipeRefreshLayout
+    android:id="@+id/swiperefreshbook"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.amit.dsiofficial.NotificationFragment"
-    android:orientation="vertical"
     >
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swiperefreshbook"
+<LinearLayout
+
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <!-- TODO: Update blank fragment layout -->
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerViewBook"
+        android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        tools:context="com.example.amit.dsiofficial.NotificationFragment"
+        android:orientation="vertical"
+        >
+
+
+            <!-- TODO: Update blank fragment layout -->
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerViewBook"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+            </android.support.v7.widget.RecyclerView>
+
+
+
+        <android.support.design.widget.CoordinatorLayout
+            android:id="@+id/fabLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
-        </android.support.v7.widget.RecyclerView>
-    </android.support.v4.widget.SwipeRefreshLayout>
+            android:layout_height="match_parent">
 
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fabBook"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_margin="30dp"
+                android:src="@drawable/newvook"
+                app:elevation="10dp"
 
-    <android.support.design.widget.CoordinatorLayout
-        android:id="@+id/fabLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+                app:fabSize="mini" />
+        </android.support.design.widget.CoordinatorLayout>
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fabBook"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="30dp"
-            android:src="@drawable/newvook"
-            app:elevation="10dp"
+    </FrameLayout>
 
-            app:fabSize="mini" />
-    </android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
 
-</FrameLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
