--- a/DSIOfficial/app/src/main/res/layout/activity_notification_info.xml
+++ b/DSIOfficial/app/src/main/res/layout/activity_notification_info.xml
@@ -6,11 +6,47 @@
     android:layout_height="match_parent"
     tools:context="com.example.amit.dsiofficial.NotificationInfoActivity">
 
+    <!--
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Download"
         android:id="@+id/downloadButton"
         />
+    -->
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:id="@+id/notif_linear_layout"
+        >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Title"
+            android:textAlignment="center"
+            android:textSize="15dp"
+            android:padding="10dp"
+            android:textColor="#000"
+            android:id="@+id/title_notif_info"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Description"
+            android:paddingTop="40dp"
+            android:paddingBottom="10dp"
+            android:paddingRight="10dp"
+            android:paddingLeft="10dp"
+            android:textColor="#363636"
+            android:id="@+id/desc_notif_info"
+            android:autoLink="all"
+            />
+
+    </LinearLayout>
+
 
 </LinearLayout>
