--- a/DSIOfficial/app/src/main/res/layout/activity_notification_info.xml
+++ b/DSIOfficial/app/src/main/res/layout/activity_notification_info.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,7 +18,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:id="@+id/notif_linear_layout"
         >
 
         <TextView
@@ -27,7 +25,7 @@
             android:layout_height="wrap_content"
             android:text="Title"
             android:textAlignment="center"
-            android:textSize="15dp"
+            android:textSize="18dp"
             android:padding="10dp"
             android:textColor="#000"
             android:id="@+id/title_notif_info"
@@ -45,6 +43,16 @@
             android:id="@+id/desc_notif_info"
             android:autoLink="all"
             />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/notif_linear_layout"
+            android:padding="50dp"
+            android:orientation="horizontal"
+            >
+
+        </LinearLayout>
 
     </LinearLayout>
 
