--- a/DSIOfficial/app/src/main/res/values/colors.xml
+++ b/DSIOfficial/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#424e96</color>
-    <color name="colorPrimaryDark">#424e96</color>
+    <color name="colorPrimary">#f11411a1</color>
+    <color name="colorPrimaryDark">#f11411a1</color>
     <color name="colorAccent">#000000</color>
     <color name="messageHeadingColour">#000000</color>
     <color name="messageDescriptionColour">#494949</color>
