--- a/DSIOfficial/app/src/main/res/layout/activity_login.xml
+++ b/DSIOfficial/app/src/main/res/layout/activity_login.xml
@@ -128,9 +128,8 @@
             android:layout_width="90dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_weight="0.34"
-
-            android:src="@drawable/dsi_logo" />
+            android:layout_weight="0.74"
+            android:src="@drawable/dsce_hub_logo" />
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
