Admin level notification segregation. Admins can now choose to send notifications to only whom they choose to.

--- a/DSIOfficial/app/src/main/res/layout/activity_post_notification.xml
+++ b/DSIOfficial/app/src/main/res/layout/activity_post_notification.xml
@@ -108,6 +108,12 @@
             android:orientation="vertical"
             >
 
+            <android.support.v7.widget.AppCompatSpinner
+                android:layout_width="match_parent"
+                android:id="@+id/yearSpinnerPostNotif"
+                android:layout_weight="1"
+                android:layout_height="0dp"> </android.support.v7.widget.AppCompatSpinner>
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
