--- a/DSIOfficial/app/src/main/res/menu/top_time_table_nav.xml
+++ b/DSIOfficial/app/src/main/res/menu/top_time_table_nav.xml
@@ -2,22 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/top_navigation_profile"
-        android:title="Profile"
+        android:id="@+id/top_time_change_section"
+        android:title="Change Section"
         android:letterSpacing="0.3"/>
 
-    <item
-        android:id="@+id/top_navigation_settings"
-        android:title="Settings"
-        android:letterSpacing="0.3"/>
 
     <item
-        android:id="@+id/top_navigation_about"
+        android:id="@+id/top_time__about"
         android:title="About Us"
         android:letterSpacing="0.3"/>
 
     <item
-        android:id="@+id/top_navigation_logout"
+        android:id="@+id/top_time__logout"
         android:title="Log Out"
         android:letterSpacing="0.3"/>
 
